--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
             MYSQL_ROOT_PASSWORD: root
         ports:
             - 3306:3306
-    adminer:
-        image: adminer
+    phpmyadmin:
+        image: phpmyadmin
         restart: always
         ports:
-            - 8080:8080
+            - 8080:80
+        environment:
+            - PMA_ARBITRARY=1
