--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,8 @@ services:
             - 8080:80
         environment:
             - PMA_ARBITRARY=1
+    adminer:
+        image: adminer
+        # restart: always
+        # ports:
+        #     - 8080:8080
