--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
         # Uncomment below when on Mac M1
         # platform: linux/arm64/v8
         command: --default-authentication-plugin=mysql_native_password
-        restart: always
+        # restart: always
         environment:
             MYSQL_ROOT_PASSWORD: root
         ports:
             - 3306:3306
     phpmyadmin:
         image: phpmyadmin
-        restart: always
+        # restart: always
         ports:
             - 8080:80
         environment:
