--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
-    },
-    "devDependencies": {
-        "@vitejs/plugin-vue": "^4.1.0",
-        "axios": "^1.1.2",
-        "eslint": "^8.37.0",
-        "eslint-plugin-vue": "^9.10.0",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.21",
-        "vite": "^4.0.0",
-        "vue": "^3.2.47"
-    },
-    "dependencies": {
-        "@inertiajs/vue3": "^1.0.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "fix:eslint": "eslint --ext .js,.vue resources/js/ --fix"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.1.2",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "laravel-vite-plugin": "^0.7.2",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.0.0",
+    "vue": "^3.2.47"
+  },
+  "dependencies": {
+    "@inertiajs/vue3": "^1.0.2"
+  },
+  "name": "larazillow",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "version": "1.0.0",
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alldone03/LaraVue.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alldone03/LaraVue/issues"
+  },
+  "homepage": "https://github.com/alldone03/LaraVue#readme"
 }
